# VisualizedBowtie2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CigarStringParser.h  Helpers.h  KeyboardEventHandler.h  SamEntry.h  SamFileReader.h  SamFileVisualizer.h
src/: CigarStringParser.cpp  Helpers.cpp  KeyboardEventHandler.cpp  SamEntry.cpp  SamFileReader.cpp  SamFileVisualizer.cpp  main.cpp
